2008-05-21  kitone  <kitone@gna.org>

	* share/subtitleeditor.desktop:
	Fix Categories.

2008-05-20  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2008-05-20  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.21.1 release.

2008-05-20  kitone  <kitone@gna.org>

	* src/utility.cc:
	Display an error message if check_registry failed.

	* src/vp/GStreamerPlayer.cc:
	* src/we/WaveformGenerator.cc:
	Better error message when an gstreamer element is missing.

2008-05-18  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/SubtitleSystem.cc:
	* src/formats/SubtitleTimedText.cc:
	* src/formats/SubtitleTimedText.h:
	Add new format "Timed Text (TT) Authoring Format 1.0".

	* src/main.cc:
	Fix default config.

	* src/utility.cc:
	Improve gstreamer plugins missing message.

2008-05-18  kitone  <kitone@gna.org>

	* share/glade/dialog-preferences.glade:
	* share/glade/dialog-view-manager.glade:
	Fix: Don't translate gtk-*.
	
	* src/actions/ExternalVideoPlayer.cc:
	Display a message if the  launch of the external player failed.

2008-05-16  kitone  <kitone@gna.org>

	* TODO:
	Update.

2008-05-14  kitone  <kitone@gna.org>

	* src/gui/Application.cc:
	Check exception with set_icon_from_file.
	(https://gna.org/bugs/?11449)

2008-05-13  kitone  <kitone@gna.org>

	* src/we/WaveformRendererCairo.cc:
	* src/we/WaveformRendererGL.cc:
	Small fix.

2008-05-12  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2008-05-11  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.21.0 release.

2008-05-08  kitone  <kitone@gna.org>

	* configure.in:
	Add da, pt and zh_CN translations.

2008-05-05  kitone  <kitone@gna.org>

	* src/SubtitleView.cc:
	* src/SubtitleView.h:
	Add function get_column_label_by_name.

	* src/actions/ViewManager.cc:
	Uses the label of the column rather than the internal name.

2008-05-04  kitone  <kitone@gna.org>

	* configure.in:
	* src/main.cc:
	* src/we/WaveformEditor.cc: