@@ -1,5 +1,5 @@
 ## SUBDIRS = m4 share src plugins po
-SUBDIRS = m4 share src po
+SUBDIRS = m4 share src docs po
 
 EXTRA_DIST = autogen.sh prepare-ChangeLog.pl prepare-po.sh
 
