@@ -1,0 +1,5 @@
+SUBDIRS = 
+
+EXTRA_DIST = subtitleeditor.1
+
+man_MANS = subtitleeditor.1
